# visualize_narrow_corridor_with_ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.ipynb  pyproject.toml
docs/: index.html
example/: Iran (Persia) 1880-2025 promot and response.txt  usa-sonnet-4-6.json
paper/: README.md  RUNBOOK.md  appendix_transcript.txt  main.tex  references.bib
paper/experiments/: analysis.py  atlas_combined.py  corridor_schematic.py  ensemble.py  lang_ablation.py  run_experiments.py  summarize.py  vdem_atlas.py
paper/experiments/derived/: lang_ablation.csv
paper/experiments/results/: chile__anthropic-claude-opus-4-8.json  chile__ensemble-mean.json  chile__gemini-gemini-2.5-pro.json  chile__openai-gpt-5.5.json  chile__openrouter-qwen-qwen-2.5-72b-instruct.json  chile__vdem.json  china__anthropic-claude-opus-4-8.json  china__ensemble-mean.json  china__gemini-gemini-2.5-pro.json  china__openai-gpt-5.5.json  china__openrouter-qwen-qwen-2.5-72b-instruct.json  china__vdem.json  colombia__anthropic-claude-opus-4-8.json  colombia__ensemble-mean.json  colombia__gemini-gemini-2.5-pro.json  colombia__openai-gpt-5.5.json  colombia__openrouter-qwen-qwen-2.5-72b-instruct.json  colombia__vdem.json  democratic-republic-of-the-congo__anthropic-claude-opus-4-8.json  democratic-republic-of-the-congo__vdem.json  (+52 more)
paper/tables/: intermodel.tex  validation.tex
scripts/: build_site.py  deploy-to-website.sh
src/narrow_corridor/: __init__.py  animate.py  cli.py  llm.py  models.py  pipeline.py  plot.py  prompts.py  storage.py
tests/: test_parsing.py
thread/: THREAD.md
(+30 files in other folders)
