[project]
name = "narrow-corridor"
version = "0.1.0"
description = "Visualize a country's state-vs-society power trajectory (Acemoglu & Robinson's Narrow Corridor) using LLMs, across any provider."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ebrahim M. Songhori" }]
dependencies = [
    "litellm>=1.55",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "pillow>=10.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ncorridor = "narrow_corridor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrow_corridor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
